--- a/configs/.env
+++ b/configs/.env
@@ -23,3 +23,4 @@ EDAP_INTEGRATION_LAMBDA_BUCKET=aw-pets-euw-dev-s3-edap-integrationlambda
 EDAP_INTEGRATION_QUEUE_NAME=sqs-edap-integration
 EDAP_INTEGRATION_DLQ_NAME=sqs-edap-integration-dlq
 VITE_GA_CONFIG_ID=G-KDJBNRPRJM
+AUDIT_SERVICE_DATABASE_NAME=pets-local-audit
