--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.0",
+    "@aws-sdk/client-cloudtrail": "3.787.0",
     "@aws-sdk/client-dynamodb": "3.788.0",
     "@aws-sdk/client-lambda": "3.787.0",
     "@aws-sdk/client-s3": "3.787.0",
