--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/util-dynamodb": "3.788.0",
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
+    "@smithy/types": "^4.9.0",
     "aws-jwt-verify": "^5.0.0",
     "aws-xray-sdk": "^3.10.1",
     "clean-deep": "^3.4.0",
