--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -327,11 +327,12 @@ jobs:
           name: failed-tests-screenshots
           path: pets-ui/cypress/screenshots
 
-  share-deployment-details:
+  share-deployment-details-non-prod:
     needs: cypress-run
     name: Share Deployment Details
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
+    if: inputs.environment != 'prod'
 
     steps:
       - name: Checkout code
@@ -354,10 +355,63 @@ jobs:
         run: |
           pnpm notify:teams '${{ secrets.APP_DEPLOYMENT_NOTIFICATION_CHAT }}' 'Clinic app: ${{ github.ref_name }} has been deployed to ${{ inputs.environment }}'
 
-      - name: Notify Teams Chat(Preprod and Prod)
-        if: contains('prod preprod', inputs.environment)
+      - name: Notify Teams Chat(Preprod)
+        if: contains('preprod', inputs.environment)
         run: |
           pnpm notify:teams '${{ secrets.TECH_TEAM_CHAT }}' 'Clinic app: 🚀 App deployment to ${{ inputs.environment }} ran successfully'
+
+      - name: Get Pull Request Number
+        id: get_pr
+        run: |
+          PR_NUMBER=$(gh pr list --head '${{ github.ref_name }}' --state open --json number --jq '.[0].number')
+          echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deployment details
+        uses: actions/github-script@v7
+        if: env.PR_NUMBER != ''
+        with:
+          script: |
+            github.rest.issues.createComment({
+            issue_number: ${{ env.PR_NUMBER }},
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: `🚀 Pull Request ${{ env.PR_NUMBER }} deployed to ${{ inputs.environment }}
+
+              - React app: ${{ vars.APP_DOMAIN }}
+              - API Docs: ${{ vars.APP_DOMAIN }}/api-docs
+            `
+            })
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  share-deployment-details-prod:
+    needs: build-and-deploy-ui
+    name: Share Deployment Details
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+    if: inputs.environment == 'prod'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Notify Teams Chat(Prod)
+        run: |
+          pnpm notify:teams '${{ secrets.TECH_TEAM_CHAT }}' 'Clinic app: 🚀 App deployment to prod ran successfully'
 
       - name: Get Pull Request Number
         id: get_pr
